# cloud-failer

./: .env  .pre-commit-config.yaml  Cargo.toml  compose.yaml
db/product/migrations/: 01_init.sql  02_data.sql
frontend/: Cargo.toml
frontend/src/: config.rs  htmx.rs  main.rs  state.rs
frontend/templates/: base.html  shop.html
product_catalog/: Cargo.toml
product_catalog/src/: config.rs  main.rs  service.rs
proto/: Cargo.toml  build.rs
proto/proto/: product_catalog.proto
proto/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: lib.rs  product_catalog.rs
src/product/: args.rs  handlers.rs  mod.rs  model.rs  service.rs  state.rs
