[dependencies]
askama = "0.12.1"
axum = {version = "0.7.5", features = ["macros"]}
clap = {version = "4.5.3", features = ["derive", "env"]}
proto = {path = "../proto"}
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
shared = {path = "../shared"}
tokio = {version = "1.36.0", features = ["macros", "rt-multi-thread"]}
tonic = "0.11.0"
tower = {version = "0.4", features = ["util"]}
tower-http = {version = "0.5.0", features = ["fs", "timeout", "trace"]}
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"

[package]
edition = "2021"
name = "frontend"
version = "0.1.0"
