[package]
name = "product_catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.11.0"
tower = "0.4.13"
tower-http = { version = "0.4", features = ["trace", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
shared = { path = "../shared" }
proto = { path = "../proto" }
trace = "0.1.7"
